--- a/django_test/mytestsite/im_blog/templates/im_blog/post_list.html
+++ b/django_test/mytestsite/im_blog/templates/im_blog/post_list.html
@@ -6,6 +6,11 @@
         <div>
             <h1><a herf="">im's blog</a></h1>
         </div>
+        {% for post in posts %}
+        <div>
+            {{ post }}
+        </div>
+        {% endfor %}
 
         <div>
             <p>published:18.03.2020,15:59</p>
